# registers

./: .gitignore  LICENSE  README.md  docker-compose.test-db.yml  pyproject.toml  script.py
.github/workflows/: publish.yml
src/functionals/cli/: USAGE.md  plugins.py  registry.py  shell.py
src/functionals/cron/: USAGE.md  __init__.py  adapters.py  daemon.py  decorators.py  discovery.py  registry.py  runtime.py  state.py  workspace.py
src/functionals/fx/: USAGE.md  __init__.py  __main__.py  commands.py  scaffold.py  state.py  structure.py  support.py  templates.py
src/functionals/fx/plugins/: __init__.py  core.py  cron.py  diagnostics.py  runtime.py
src/registers/: __init__.py
src/registers/cli/: USAGE.md  __init__.py  container.py  decorators.py  dispatcher.py  exceptions.py  middleware.py  parser.py  plugins.py  registry.py  shell.py  types.py  ux.py
src/registers/cli/utils/: reflection.py  typing.py
src/registers/db/: USAGE.md  __init__.py  decorators.py  engine.py  exceptions.py  fields.py  metadata.py  operators.py  query.py  registry.py  relations.py  schema.py  security.py  testing.py  typing_utils.py
tests/: conftest.py  test_cli_registry.py  test_cli_registry_edge_cases.py  test_db_registry.py  test_db_registry_edge_cases.py  test_db_registry_fastapi_integration.py  test_db_registry_migration.py  test_db_registry_spec_features.py
tests/cli/: test_cli_error_handling.py  test_cli_future_features.py  test_cli_import_fixtures.py  test_cli_interactive_shell.py  test_cli_registry_edge_cases.py  test_interactive_shell.py
tests/cron/: test_cron_daemon_cli.py  test_cron_import_fixtures.py  test_cron_registry_runtime.py  test_cron_workspace.py
tests/db/: test_concurrency_sqlite.py  test_db_adversarial_relationships.py  test_db_error_handling.py  test_db_field_metadata.py  test_db_future_api.py  test_db_import_fixtures.py  test_db_production_readiness.py  test_db_registry.py  test_db_registry_edge_cases.py  test_db_registry_fastapi_integration.py  test_db_registry_refactor_regressions.py  test_db_registry_spec_features.py  test_exception_context.py  test_password_hashing.py  test_relationship_edge_cases.py  test_rename_table.py  test_rename_table_backends.py
tests/fx/: test_fx_commands.py
