[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registers"
version = "2.2.0"
description = "Decorator-driven persistence registry for Pydantic models and CLI tooling"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Charles DeFreese" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/nexustech101/registers"
Repository = "https://github.com/nexustech101/registers"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["registers*"]
exclude = ["*.tests*", "*.tests.*"]

[tool.setuptools]
package-dir = {"" = "src"}  # Container for package modules

[tool.setuptools.package-data]
registers = ["py.typed"]
