[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decorates"
version = "6.0.0"
description = "Decorator-driven CLI and database toolkit for Pydantic and SQLAlchemy."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Charles DeFreese" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "pyfiglet>=1.0",
    "tqdm>=4.66",
]

[project.scripts]
fx = "functionals.fx.commands:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "fastapi>=0.111",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pymysql>=1.1",
]

[project.urls]
Homepage = "https://github.com/nexustech101/functionals"
Repository = "https://github.com/nexustech101/functionals"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["functionals*"]
exclude = ["*.tests*", "*.tests.*"]

[tool.setuptools]
package-dir = {"" = "src"}  # Container for package modules

[tool.setuptools.package-data]
functionals = ["py.typed"]
