[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registers"
version = "7.1.0"
description = "Decorator-driven CLI and database toolkit for Pydantic and SQLAlchemy."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Charles DeFreese" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
  "pydantic>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "pyfiglet>=1.0,<2",
  "watchdog>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<8",
    "pytest-cov>=4.1,<5",
    "pytest-asyncio>=0.23,<1",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "psycopg[binary]>=3.2,<4",
    "pymysql>=1.1,<2",
]

[project.urls]
Homepage = "https://github.com/nexustech101/registers"
Repository = "https://github.com/nexustech101/registers"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["registers*"]
exclude = ["*.tests*", "*.tests.*"]

[tool.setuptools]
package-dir = {"" = "src"}  # Container for package modules

[tool.setuptools.package-data]
registers = ["py.typed"]
